--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+
   
     <!-- 2. Configure boostrap-->
     <!--<script src="node_modules/ng2-bootstrap/bundles/ng2-bootstrap.min.js"></script> -->
@@ -35,5 +36,6 @@
   <body>
     <app-root>Loading...</app-root>
     <script async defer src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=visualization"></script>
+    <script  src="node_modules/chart.js/dist/Chart.bundle.js"></script>
   </body>
 </html>
