pridani grafu do tabs cmp

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
   
     <!-- 2. Configure boostrap-->
-    <!--<script src="node_modules/ng2-bootstrap/bundles/ng2-bootstrap.min.js"></script> -->
+    <script src="node_modules/ng2-bootstrap/bundles/ng2-bootstrap.min.js"></script> 
     <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">-->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
 
     <!-- Slider -->
     <script src="node_modules/bootstrap-slider/dist/bootstrap-slider.js"></script>
