--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--<!DOCTYPE html>-->
 <html>
   <head>
     <base href="/">
@@ -5,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 1. Load libraries -->
-     <!-- Polyfill(s) for older browsers  -- async defer -->
+     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
@@ -22,6 +23,10 @@
     <script src="node_modules/bootstrap-slider/dist/bootstrap-slider.js"></script>
     <link href="node_modules/bootstrap-slider/dist/css/bootstrap-slider.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
+
+    <!--[if IE]>
+      <link rel="stylesheet" type="text/css" href="ie-only.css" />
+    <![endif]-->
 
     <!--<link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">-->
     <!--<link href="node_modules/skeleton-css/css/skeleton.css" rel="stylesheet">-->
