--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- 4. Display the application -->
   <body>
     <app-root>Loading...</app-root>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=visualization"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=visualization,places"></script>
     <script  src="node_modules/chart.js/dist/Chart.bundle.js"></script>
   </body>
 </html>
