zmena nadpisu stranky

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <base href="/">
-  <title>Demo app</title>
+  <title>Hlukové mapy</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
