--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <body>
   <app-root>Loading...</app-root>
   <script async defer src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=visualization,places"></script>
-  <script src="node_modules/chart.js/dist/Chart.bundle.js"></script>
-  <script src="node_modules/chart.js/dist/Chart.js"></script>
+  <!--<script src="node_modules/chart.js/dist/Chart.bundle.js"></script>
+  <script src="node_modules/chart.js/dist/Chart.js"></script>-->
 
   <!--<canvas id="myChart" width="400" height="400"></canvas>
 <script>
