uklid a uprava hlavniho slideru

--- a/index.html
+++ b/index.html
@@ -60,42 +60,8 @@
 <body>
   <app-root>Loading...</app-root>
   <script async defer src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=visualization,places"></script>
-  <script src="node_modules/chart.js/dist/Chart.bundle.js"></script>
+  <!--<script src="node_modules/chart.js/dist/Chart.bundle.js"></script>-->
   <script src="node_modules/chart.js/dist/Chart.js"></script>
-
-  <!--<script src="node_modules/chart.js/dist/Chart.bundle.js"></script>
-  <script src="node_modules/chart.js/dist/Chart.js"></script>-->
-
-  <!--<canvas id="myChart" width="400" height="400"></canvas>
-<script>
-var ctx = document.getElementById("myChart");
-var scatterChart = new Chart(ctx, {
-    type: 'line',
-    data: {
-        datasets: [{
-            label: 'Scatter Dataset',
-            data: [{
-                x: -10,
-                y: 0
-            }, {
-                x: 0,
-                y: 10
-            }, {
-                x: 10,
-                y: 5
-            }]
-        }]
-    },
-    options: {
-        scales: {
-            xAxes: [{
-                type: 'linear',
-                position: 'bottom'
-            }]
-        }
-    }
-});
-</script>-->
 </body>
 
 </html>
