--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <body>
   <app-root>Loading...</app-root>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=visualization,places"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAoAch6lyUaMuQzspX0NO_YT411hzxWy4&v=3.exp&libraries=visualization,places"></script>
   <!--<script src="node_modules/chart.js/dist/Chart.bundle.js"></script>-->
   <script src="node_modules/chart.js/dist/Chart.js"></script>
 </body>
