--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAoAch6lyUaMuQzspX0NO_YT411hzxWy4&v=3.exp&libraries=visualization,places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAoAch6lyUaMuQzspX0NO_YT411hzxWy4&v=3.exp&libraries=visualization,places"></script>
 </body>
 </html>
