--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>Hlukové mapy</title>
   <base href="/">
 
+  <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic,900,900italic,100italic,100&subset=latin-ext' type='text/css' />
+
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
